@@ -448,6 +448,8 @@ LED_BOOKMARK    0   0
 LED_SCRUB       0   0
 LED_METRONOME   0   0
 LED_RECORD      0   0
+LED_JAM_LIVE    0   0
+LED_JAM_STEP    0   0
 LED_LIVE        0   0
 LED_UTILITY     0   0
 LED_COPY        0   0
@@ -510,6 +512,8 @@ BUTTON_RIGHT  0   0
 BUTTON_SCRUB     M4   4
 BUTTON_METRONOME M4   5
 BUTTON_LIVE       0   0
+BUTTON_JAM_LIVE   0   0
+BUTTON_JAM_STEP   0   0
 
 #             SR  Pin
 BUTTON_STOP   M3   5
